# esp32_image_parser

./: .gitignore  main.py  pyproject.toml
esp32_image_parser/: __init__.py  cli.py  esp32_firmware_reader.py  read_nvs.py
