[project]
name = "esp32-image-parser"
version = "0.1.0"
description = "ESP32 firmware image parser and analysis tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "makeelf>=0.1.0",
    "esptool>=4.0",
    "hexdump"
]

license = { file = "LICENSE.md" }
keywords = ["esp32", "firmware", "parser", "elf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
esp32-image-parser = "esp32_image_parser.cli:main"

[project.urls]
Homepage = "https://github.com/tenable/esp32-image-parser"
Repository = "https://github.com/tenable/esp32-image-parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["esp32_image_parser"]
